fixed grid - search bar

--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,13 +1,20 @@
 .Dictionary .form {
-  max-width: 700px;
+  max-width: 380px;
   margin: 0 auto;
+}
+.Dictionary .form-components {
+  display: flex;
+  justify-content: space-around;
 }
 .Dictionary .search-bar {
   border-radius: 3px;
 }
 .Dictionary .search-button {
-  max-width: 1;
   border-radius: 3px;
   background: var(--secondary);
+  color: var(--background);
+}
+.Dictionary .search-button:hover {
+  background: var(--highlight);
   color: var(--background);
 }
