--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,9 @@
   background-color: var(--background);
   font-family: var(main-font);
 }
-.App h1 {
-  text-align: center;
-  color: var(--primary);
-  font-weight: bold;
-  padding: 20px 0;
-  font-size: 54px;
+.App img {
+  width: 100%;
+  margin: 20px 0;
 }
 .App footer {
   text-align: center;
