--- a/src/Meanings.css
+++ b/src/Meanings.css
@@ -2,6 +2,11 @@
   margin: 30px 0;
 }
 
+.Meanings h6 {
+  margin-bottom: 20px;
+  font-style: italic;
+  color: var(--secondary);
+}
 .Meanings .definition {
   font-size: 14px;
 }
