--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -12,8 +12,10 @@
 }
 .Synonyms .box {
   border: 2px dotted var(--highlight);
+  border-radius: 8px;
+  margin: 5px;
 }
 .Synonyms .synonym {
   font-style: italic;
-  padding: 4px 8px;
+  padding: 4px 0;
 }
