--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 :root {
   --main-font: "Lato", sans-serif;
+  --roboto: "Roboto", sans-serif;
   --monospace: "Space Mono", monospace;
   --primary: #303841;
-  --secondary: #3a4750;
-  --highlight: #d72323;
-  --background: #eeeeee;
+  --secondary: #1b3c53;
+  --highlight: #13a4c8;
+  --background: #e6f8fd;
 }
